--- a/config/config.yaml
+++ b/config/config.yaml
@@ -38,10 +38,10 @@ database:
 
 # redis 配置
 redis:
-  host: m_redis
+  host: 127.0.0.1
   port: 6379
-  password: 123456
-  db: 1
+  password:
+  db: 0
   maxIdle: 30
   maxActive: 30
   idleTimeout: 200
